--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aliziodev/laravel-taxonomy": "^2.5",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.6",
+        "spatie/laravel-medialibrary": "^11.13",
+        "spatie/laravel-query-builder": "^6.3",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
