--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "aliziodev/laravel-taxonomy": "^2.5",
         "inertiajs/inertia-laravel": "^2.0",
+        "inertiaui/modal": "^0.21.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.6",
