--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.0",
+        "@inertiaui/modal-vue": "^1.0.0-beta-2",
         "@tailwindcss/vite": "^4.1.11",
         "@tanstack/vue-table": "^8.21.3",
         "@vitejs/plugin-vue": "^6.0.0",
