--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
+        "motion-v": "^1.7.0",
         "reka-ui": "^2.4.1",
-        "tailwind-merge": "^3.2.0",
+        "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "typescript": "^5.2.2",
