--- a/package.json
+++ b/package.json
@@ -34,14 +34,18 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "embla-carousel-vue": "^8.6.0",
+        "idb-keyval": "^6.2.2",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "motion-v": "^1.7.0",
+        "ofetch": "^1.4.1",
         "reka-ui": "^2.4.1",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "typescript": "^5.2.2",
+        "unstorage": "^1.16.1",
         "vite": "^7.0.4",
         "vue": "^3.5.13",
         "vue-sonner": "^2.0.2",
