--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
         "concurrently": "^9.0.1",
         "embla-carousel-vue": "^8.6.0",
         "idb-keyval": "^6.2.2",
+        "kioskboard": "^2.3.0",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "motion-v": "^1.7.0",
         "ofetch": "^1.4.1",
         "reka-ui": "^2.4.1",
+        "simple-keyboard": "^3.8.81",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
