--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/wayfinder": "^0.1.6",
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-query-builder": "^6.3",
+        "spatie/laravel-settings": "^3.4",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
