--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@tanstack/vue-table": "^8.21.3",
         "@vitejs/plugin-vue": "^6.0.0",
         "@vueuse/core": "^12.8.2",
+        "@vueuse/integrations": "^13.9.0",
         "@vueuse/sound": "^2.1.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -43,6 +44,7 @@
         "ofetch": "^1.4.1",
         "reka-ui": "^2.4.1",
         "simple-keyboard": "^3.8.81",
+        "sortablejs": "^1.15.6",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
